@@ -2,6 +2,10 @@
 # Copyright 2006-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> gen_determineargs.sh:
+  Fix two calls to set_config_with_override on CMD_KERNCACHE and some
+  indentation weirdness
+
   04 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> generic/initrd.scripts:
   Change &>/dev/null to >/dev/null 2>&1 because busybox ash sucks
 
